--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     
     <title>Basic CSS Example</title>
-    <link rel="stylesheet" href="CSS.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
             <h1 id='header'>Awesome Header</h1>
